United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7126993 JCK test api/java_util/jar/Jarfile jarFile0129 failing [macosx]
7126993 : JCK test api/java_util/jar/Jarfile jarFile0129 failing [macosx]

Details
Type:
Bug
Submit Date:
2012-01-04
Status:
Closed
Updated Date:
2012-08-21
Project Name:
JDK
Resolved Date:
2012-03-28
Component:
core-libs
OS:
os_x
Sub-Component:
java.util.jar
CPU:
unknown,generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
7
Fixed Versions:
7u4

Related Reports
Backport:
Duplicate:
Duplicate:

Sub Tasks

Description
Test is failing with current jdk7u-osx forest on Macosx. The equivalent test in the zip directory is also failing.

In both cases, a zip/jar is created with the OPEN_DELETE flag and the file does not appear to be deleted
at the end of the test.

                                    

Comments
EVALUATION

Remove redefinition of JVM_O_DELETE
                                     
2012-01-23



Hardware and Software, Engineered to Work Together